--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Iseult (Legendary character) -- Romances -- Adaptations'
 - !lcsh 'Arthurian romances -- Adaptations'
+- GITenberg
 title: Tristan ja Isolde
 url: http://www.gutenberg.org/ebooks/19674
